--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -14,6 +14,11 @@
   z-index: 10;
 }
 
+.mainTitle {
+  color: white;
+  text-decoration: none;
+}
+
 .main-image {
   width: 100%;
   height: 25rem;
@@ -25,5 +30,4 @@
   width: 110%;
   height: 100%;
   object-fit: cover;
-  transform: rotateZ(-5deg) translateY(-4rem) translateX(-1rem);
 }
